SOFTWARE_FACTORY/infra-gitops/apps/kaanbal-console/overlays/dev/patch-deployment-labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaanbal-console
  labels:
    kaanbal-engine.io/environment: dev
spec:
  template:
    metadata:
      labels:
        environment: dev
