SOFTWARE_FACTORY/infra-gitops/apps/kaanbal-console/overlays/dev/patch-ingress-delete.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaanbal-console
